--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 	<body>
 		<div class="container">
 			<!-- <h1 class="heading text-center">SORTING VISUALIZER</h1> -->
-			<img class="mx-auto d-block mt-3" src="assets/amazing-font.png" alt="" />
+			<img
+				class="header mx-auto d-block mt-3"
+				src="assets/amazing-font.png"
+				alt=""
+			/>
 			<div id="array-container">
 				<div id="array"></div>
 				<h5 id="no-algo-warning" class="display-none">
@@ -68,9 +72,11 @@
 						/>
 					</div>
 					<!--microphone -->
+
 					<button type="button" class="btn btn-outline-info talk mx-2">
 						<i class="fa fa-microphone" aria-hidden="true"></i>
 					</button>
+
 					<h3 class="content"></h3>
 					<!--microphone ends-->
 				</div>
